Fix button on mobile

--- a/src/views/Home/components/MouseBtn.css
+++ b/src/views/Home/components/MouseBtn.css
@@ -58,7 +58,7 @@
 
 
 @media screen and (max-width: 768px) {
-  .buy-snek-btn {
+  .buy-mouse-btn {
   	padding: 2rem;
   	padding-right: 3rem;
   	padding-left: 3rem;
